--- a/AdminDashBoard/css/style.css
+++ b/AdminDashBoard/css/style.css
@@ -59,37 +59,124 @@ nav .iconTitle svg {
 /* main */
 
 .main {
-    background-color: beige;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-rows: min-content 1fr;
 }
 
-.profile {
-    width: 60px;
-    height: 60px;
-    background-color: blue;
-    border-radius: 50px;
+.header {
+    display: grid;
+    grid-template-rows: 1fr 1.5fr;
+    background-color: white;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 2;
 }
 
-.main > .topnav-left {
+.topnav {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: start;
-    justify-content: start;
-}
-.main > .topnav-right {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    align-items: start;
-    justify-content: end;
+    grid-template-columns: 60% 40%;
+    justify-content: space-between;
+    margin: 10px 50px;
 }
 
-.main svg {
+.topnav-left {
+    display: grid;
+    grid-template-columns: min-content 1fr;
+    align-items: center;
+    justify-self: start;
+    margin-right: 50px;
+}
+.topnav-right {
+    display: grid;
+    grid-template-columns: repeat(3, min-content);
+    align-items: center;
+    justify-self: end;
+    text-wrap: nowrap;
+    column-gap: 30px;
+}
+
+.topnav-left svg, .bell {
     width: var(--iconSize);
     height: var(--iconSize);
     transform: scale(0.5);
 }
 
+.profileIcon {
+    width: var(--iconSize);
+    height: var(--iconSize);
+}
+
 .topnav-left > input {
-    height: 30px;
+    width: 600px;
+    height: 20px;
+    border-radius: 20px;
+    border-style: solid;
+    background-color: #E2E8F0;
+    padding-left: 10px;
+}
+
+.topnav-left > input:focus {
+    outline: none;
+}
+
+.nickname {
+    font-weight: bold;
+}
+
+.profile {
+    display: grid;
+    grid-template-columns: repeat(2, min-content);
+    justify-content: space-between;
+    align-items: center;
+    margin: 10px 40px 10px 70px;
+}
+
+.profile-left {
+    display: grid;
+    grid-template-columns: repeat(2, min-content);
+    column-gap: 20px;
+}
+
+.profile-left > svg {
+    transform: scale(1.5);
+}
+
+.profileInfo {
+    font-weight: bold;
+    text-wrap: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+    flex-direction: column;
+}
+
+.profileInfo span:first-child{
+    font-size: 0.8rem;
+    margin-bottom: 5px;
+}
+
+.profileInfo span:last-child {
+    font-size: 1.2rem;
+}
+
+.profile-right {
+    display: grid;
+    grid-template-columns: repeat(3, min-content);
+    column-gap: 20px;
+}
+
+.profile-right button {
+    padding: 10px 30px;
+    background-color: #1992D4;
+    color: white;
+    font-weight: bold;
+    border: 0 solid inherit;
+    border-radius: 30px;
+    cursor: pointer;
+    border-style: none;
+}
+
+/* dashboard */
+
+.dashboard {
+    background-color: #E2E8F0;;
 }
