--- a/TicTacToe/style.css
+++ b/TicTacToe/style.css
@@ -13,5 +13,47 @@ body {
 }
 
 .square {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: 3px solid black;
 }
+
+.o {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 50px;
+    height: 50px;
+    border: 3px solid;
+    border-radius: 100px
+}
+
+.x,
+.x::after {
+    display: block;
+    box-sizing: border-box;
+    background: currentColor;
+    border-radius: 10px;
+}
+
+.x {
+    margin-top: -2px;
+    position: relative;
+    transform: scale(var(--ggs,5)) rotate(45deg); /* Rotate the symbol by 45 degrees */
+    width: 16px;
+    height: 1.5px;
+}
+
+.x::after {
+    content: "";
+    position: absolute;
+    width: 1.5px;
+    height: 16px;
+    top: -7px;
+    left: 7px;
+}
+
+
+
