--- a/TicTacToe/style.css
+++ b/TicTacToe/style.css
@@ -1,18 +1,50 @@
 body {
-    display: grid;
-    grid-template-rows: min-content 1fr;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
-    justify-content: center;
-    align-items: start;
+    justify-content: start;
+    align-items: center;
     overflow: hidden;
+    margin: 30px;
 }
 
 h1 {
     justify-self: center;
+    align-items: center;
     font-family: cursive;
     font-size: 50px;
     font-weight: bold;
 }
+
+.countContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    height: 100%;
+}
+
+p {
+    font-family: cursive;
+    font-size: 50px;
+    font-weight: bold;
+}
+
+.countContainer > p {
+    align-self: end;
+}
+
+.player1 {
+    justify-self: start;
+}
+
+.player2 {
+    justify-self: end;
+}
+
+.draws {
+    justify-self: center;
+}
+
 
 .board {
     display: grid;
@@ -63,5 +95,9 @@ h1 {
     left: 7px;
 }
 
+.countContainer {
+    display: grid;
+    justify-content: space-between;
+    align-items: center;
 
-
+}
