--- a/5_RestaurantPage/src/style.css
+++ b/5_RestaurantPage/src/style.css
@@ -2,6 +2,7 @@ body {
     display: grid;
     grid-template-rows: min-content 1fr;
     margin: 0 20%;
+    height: 100vh;
 }
 
 nav {
@@ -17,7 +18,7 @@ header > nav > button {
     align-self: center;
 }
 
-#content {
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -34,14 +35,13 @@ header > nav > button {
     position: relative;
 }
 
-.imageContainer img, .black {
+img, .black {
     width: 100%;
     height: 100%;
 }
 
-.imageContainer img {
+.imageContainer {
     background-image: url(./restaurant.jpg);
-    background-size: cover;
 }
 
 .imageContainer > * {
@@ -65,3 +65,37 @@ header > nav > button {
 p {
     align-self: center;
 }
+
+/* menu items */
+
+.menuContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.menuItem {
+    position: relative;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+}
+
+.menuItem > img {
+    background-image: url(burger.jpg);
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    object-position: center;
+}
+
+.menuItem > p {
+    font-size: 1.5rem;
+    font-weight: bold;
+    position: absolute;
+    bottom: 0%;
+    left: 5%;
+    text-align: start;
+}
+
+
