--- a/6_ToDoApp/src/style.css
+++ b/6_ToDoApp/src/style.css
@@ -62,6 +62,11 @@ body {
     overflow: hidden;
 }
 
+header {
+    margin: 10px;
+    align-items: center;
+}
+
 hr {
     height: 15px;
     caret-color: white;
@@ -71,7 +76,7 @@ hr {
 main {
     display: grid;
     grid-template-columns: 1fr 5fr;
-    height: auto;
+    height: 80%;
 }
 
 main > .navBar {
@@ -79,6 +84,47 @@ main > .navBar {
     padding: 1em;
     margin: 1em;
     border-radius: 10px;
+    height: min-content;
+}
+
+.allTasks > *:first-child {
+    margin-bottom: 0.4em;
+}
+
+.allTasks > *:last-child {
+    margin-bottom: 0.8em;
+}
+
+.myProjects {
+    height: 100%;
+    max-width: 60%;
+    min-width: 200px;
+    text-wrap: nowrap;
+    overflow: hidden;
+}
+
+.myProjects > ul > * {
+    list-style-type: none;
+    margin: 10px 0;
+}
+
+.myProjectsHeadline {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.addProject {
+    background-color: orange;
+    color: white;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    padding: 0.5em;
+    cursor: pointer;
+    width: 30px;
+    height: 30px;
 }
 
 .taskListBtn {
@@ -88,8 +134,9 @@ main > .navBar {
     text-decoration-style: none;
     border: none;
     border-radius: 5px;
-    padding: 0.5em;
+    padding: 0.8em;
     cursor: pointer;
+    text-wrap: none;
 }
 
 header {
@@ -103,4 +150,141 @@ header h1 {
 
 main h2 {
     font-size: 1.2rem;
+}
+
+/* create project */
+#createProject {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 30vw;
+    height: 5vh;
+    background-color: #262626;
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: .6em 1em;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    box-shadow: 1px 1px 20px rgba(255, 255, 255, 0.212);
+}
+
+/* content */
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    height: 100%;
+    margin: 1em;
+    padding: 1em;
+    border-radius: 10px;
+    background-color: #2e2e2e;
+}
+
+.content h1 {
+    font-size: 1.8rem;
+}
+
+#todo-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+    width: 100%;
+    margin: 1em 0;
+}
+
+#todo-list > * {
+    margin: 10px 0;
+}
+
+#todo-list input #due-date {
+    align-self: end;
+}
+
+.todo-input {
+    border: none;
+    color: white;
+    background-color: inherit;
+    outline: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    width: 40vw;
+    height: 3vh;
+    align-items: center;
+    font-weight: bold;
+    padding: 2px 5px;
+}
+
+.round {
+    position: relative;
+  }
+  
+  .round label {
+    background-color: inherit;
+    border: 2px solid #1a1a1a;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 28px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 28px;
+  }
+  
+  .round label:after {
+    border: 2px solid #fff;
+    border-top: none;
+    border-right: none;
+    content: "";
+    height: 6px;
+    left: 7px;
+    opacity: 0;
+    position: absolute;
+    top: 8px;
+    transform: rotate(-45deg);
+    width: 12px;
+  }
+  
+  .round input[type="checkbox"] {
+    visibility: hidden;
+  }
+  
+  .round input[type="checkbox"]:checked + label {
+    background-color: #66bb6a;
+    border-color: #66bb6a;
+  }
+  
+  .round input[type="checkbox"]:checked + label:after {
+    opacity: 1;
+  }
+
+.input-wrapper {
+    display: grid;
+    grid-template-columns: min-content 1fr min-content;
+    gap: 1.5em;
+}
+
+
+.addTaskButton {
+    position: absolute;
+    right: 0%;
+    bottom: 0%;
+    margin: 50px;
+    background-color: orange;
+    color: white;
+    font-size: 2rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 50px;
+    padding: 0.5em;
+    cursor: pointer;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
