--- a/7_CSScomponents/style.css
+++ b/7_CSScomponents/style.css
@@ -45,10 +45,13 @@ table {
 body {
     font-size: 18px;
     background-color: black;
+    height: 100vh;
 }
 
 .wrapper {
-    background-color: steelblue;
+    display: flex;
+    flex-direction: column;
+    background-color: #317692;
     border-radius: 30px;
     height: 100%;
 }
@@ -63,12 +66,10 @@ body {
 }
 
 .content img {
-    background-image: url(./public/sentokosmos.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     width: 80vw;
     height: 80vw;
-    margin-top: 40vh;
 }
 
 .content h1, p {
@@ -88,7 +89,7 @@ body {
 .content .progressBar_bottom {
     width: 100%;
     height: 5px;
-    background-color: rgba(0, 0, 255, 0.2);
+    background-color: #3889B2;
     border-radius: 10px;
     margin: 1em 0;
     position: relative;
@@ -98,29 +99,34 @@ body {
     height: 5px;
     width: 30%;
     opacity: 1;
-    background-color: greenyellow;
+    background-color: #4AE987;
     border-radius: 10px;
     position: absolute; 
 }
 
 .controls {
-    padding: 1em;
-    height: 40px;
-}
-
-.controls > div {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 5fr 1fr;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: #FFFFFF;
     height: 100%;
     border-radius: 30px;
     gap: 0.4em;
+    padding: 0.5em;
+    margin: 0.8em;
+    height: 40px;
+}
+
+
+.controls svg {
+    height: 100%;
+    object-fit: contain;
+    fill: white;
 }
 
 .controls input, button {
-    height: 40px
+    height: 40px;
+    width: 40px;
 }
 
 .controls input {
@@ -128,8 +134,68 @@ body {
 }
 
 .controls button {
-    background-color: black;
-    border-radius: 50%;
     border: none;
-    width: 40px;
+    border-radius: 50%;
+    background-color: #162235;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.powerOff > svg {
+    height: 40px;
+    fill: black;
+}
+
+.sliderContainer {
+    position: relative;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.slider {
+    -webkit-appearance: none;
+    appearance: none;
+    background: transparent;
+    cursor: pointer;
+    background-color: #162235;
+    border-radius: 30px;
+  }
+
+.slider::-moz-range-track, 
+.slider::-webkit-slider-runnable-track {
+    
+    height: 100%;
+    
+}
+
+.overSlider {
+    background-color: greenyellow;
+    position: absolute;
+    height: 95%;
+    left: 1%;
+    width: 50%;
+    border-radius: 30px;
+    z-index: 999;
+    justify-self: start;
+    pointer-events: none;
+}
+
+.slider::-moz-range-thumb {
+    -moz-appearance: none;
+    appearance: none;
+    background-color: transparent;
+    border: none;
+}
+
+.slider::-webkit-slider-thumb {
+    position: absolute;
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+.controls button:last-child {
+    background-color: #B0FDC9;
+    fill: black;
 }
