--- a/7_CSScomponents/style.css
+++ b/7_CSScomponents/style.css
@@ -46,6 +46,7 @@ body {
     font-size: 18px;
     background-color: black;
     height: 100vh;
+    font-family: 'Roboto', sans-serif;
 }
 
 .wrapper {
@@ -109,28 +110,35 @@ body {
     justify-content: space-between;
     align-items: center;
     background-color: #FFFFFF;
-    height: 100%;
     border-radius: 30px;
     gap: 0.4em;
     padding: 0.5em;
     margin: 0.8em;
     height: 40px;
+    width: min-content;
+    transition: width 1s ease;
 }
 
-
-.controls svg {
+.controls button > i {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100%;
     object-fit: contain;
-    fill: white;
+    color: white;
+    font-size: 1.3em;
 }
 
-.controls input, button {
+
+.controls button {
     height: 40px;
     width: 40px;
+    position: relative;
 }
 
 .controls input {
-    width: 120px
+    width: 30vw;
+    justify-self: center;
 }
 
 .controls button {
@@ -140,18 +148,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
-.powerOff > svg {
-    height: 40px;
-    fill: black;
+.controls .play, 
+.controls .volume, 
+.controls .sliderContainer, 
+.controls .powerOff {
+    display: none;
 }
 
 .sliderContainer {
     position: relative;
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
+    height: 100%;
 }
 
 .slider {
@@ -159,27 +168,26 @@ body {
     appearance: none;
     background: transparent;
     cursor: pointer;
+    background-color: #D2F1FE;
+    border-radius: 30px;
+    margin: 0;
+    height: 100%;
+  }
+
+.overSlider {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    top: 0;
     background-color: #162235;
     border-radius: 30px;
-  }
+    z-index: 1;
+    pointer-events: none;
+}
 
 .slider::-moz-range-track, 
 .slider::-webkit-slider-runnable-track {
-    
     height: 100%;
-    
-}
-
-.overSlider {
-    background-color: greenyellow;
-    position: absolute;
-    height: 95%;
-    left: 1%;
-    width: 50%;
-    border-radius: 30px;
-    z-index: 999;
-    justify-self: start;
-    pointer-events: none;
 }
 
 .slider::-moz-range-thumb {
@@ -197,5 +205,10 @@ body {
 
 .controls button:last-child {
     background-color: #B0FDC9;
-    fill: black;
 }
+
+.controls button:last-child > i {
+    color: black;
+}
+
+
