--- a/13_Memory-Game/src/index.css
+++ b/13_Memory-Game/src/index.css
@@ -53,9 +53,9 @@ table {
 
 :root {
   height: 100vh;
+  width: 100vw;
   background-color: #18191A;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
