--- a/14_Shopping-Cart/src/index.css
+++ b/14_Shopping-Cart/src/index.css
@@ -7,6 +7,18 @@
    License: none (public domain)
 */
 
+
+.title-reveal-animate {
+	overflow: hidden;
+	max-height: 0;
+	height: 100px;
+	transition: height 0.3s ease-in-out;
+}
+.group:hover .title-reveal-animate {
+	height: 100%;
+	max-height: 100%;
+}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -64,3 +76,5 @@ body {
 main {
 	font-family: sans-serif;
 }
+
+
