--- a/13_Memory-Game/src/index.css
+++ b/13_Memory-Game/src/index.css
@@ -52,10 +52,13 @@ table {
 }
 
 :root {
-  height: 100vh;
   width: 100vw;
   background-color: #18191A;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+html, body {
+	width: 100vw;
 }
