--- a/17_Message_Board/src/views/index.ejs
+++ b/17_Message_Board/src/views/index.ejs
@@ -1,22 +1,23 @@
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css"
+    <link rel="stylesheet" href="assets/styles.css" type="text/css" />
+    <script src="assets/script.js" defer></script>
   </head>
   <body>
-  <h1>Message Board</h1>
-  <%
-    for (let i = 0; i < messages.length; i++) { %>
-      <div class="message">
-        <p class=text>
-          <%= messages[i].text %>
-        </p>
-        <p class="user">
-          <%= messages[i].user %>
-        </p>
-        <p class="added">
-          <%= messages[i].added %>
-        </p>
-      </div>
-  <% } %>
+    <h1>Message Boards</h1>
+    <button type="button">Add</button>
+    <%
+      for (let i = messages.length - 1; i >= 0; i--) { %>
+        <div class="message">
+          <p class=text>"<%= messages[i].text%>"
+          </p>
+          <p class="user">User: 
+            <%= messages[i].user %>
+          </p>
+          <p class="added">Added: 
+            <%= messages[i].added %>
+          </p>
+        </div>
+    <% } %>
   </body>
 </html>
