--- a/19_Members_Only/src/views/sign-in.ejs
+++ b/19_Members_Only/src/views/sign-in.ejs
@@ -14,7 +14,7 @@
         <input type="text" id="first-name" name="first_name" required><br><br>
         
         <label for="last-name">Last Name:</label><br>
-        <input type="text" id="last-name" name="last_name" required><br><br>
+        <input type="text" id="last-name" name="last_name"><br><br>
         
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" required><br><br>
